--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "user_admin_proyect",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
